# AttendancePro

./: CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
config/: holiday_Patch.json
include/: ApiClient.h  AttendanceCalculator.h  AttendancePipeline.h  ClipboardHelper.h  DataManager.h  Enablewindowshadow.h  ExcelIo.h  FileManager.h  HolidayManager.h  MessageCenter.h  PersonRuleModel.h  QrPrintItem.h  RuleContentModel.h  RuleCoverModel.h  RuleEngine.h  Settings.h  Struct.h  Tablemodel.h  TemplateManager.h  TimeUtils.h  WindowUtil.h
resources/: Main.qml  resource.qrc
resources/Themes/: Theme.qml
resources/frag/: background.frag  background.frag.qsb  reveal.frag  reveal.qsb
resources/images/: Closeimg.qml  Max.qml  MaxActive.qml  Minize.qml
resources/qml/: Home.qml  HomeP.qml  Logo.qml  Plan.qml  PlanP.qml  RuleCoverGrid.qml
resources/qml/common/: AlertPopup.qml  AttendanceTemplateRules.qml  Card.qml  CardTitle.qml  CardToolBar.qml  FileSelectInput.qml  Footbar.qml  InputModelAddWindow.qml  LButton.qml  LComboBox.qml  LTabs.qml  MainView.qml  MessagePopup.qml  MyCheckBox.qml  Paginator.qml  PersonAddWindow.qml  PrintPage.qml  RuleAddWindow.qml  Search.qml  Smenu.qml  TableViews.qml  Title.qml
resources/qml/homepage/: HomeView.qml
resources/qml/rulepage/: RuleView.qml
resources/qml/settingpage/: SettingView.qml
resources/qrc/: qmodule.qrc
src/: main.cpp
src/core/: AttendancePipeline.cpp  DataManager.cpp  HolidayManager.cpp  RuleEngine.cpp  Settings.cpp  TemplateManager.cpp
src/datamodel/: PersonRuleModel.cpp  Tablemodel.cpp
src/utils/: ApiClient.cpp  Enablewindowshadow.cpp  ExcelIo.cpp  FileManager.cpp  MessageCenter.cpp  TimeUtils.cpp  WindowUtil.cpp
